--- a/styles.css
+++ b/styles.css
@@ -70,12 +70,20 @@ img {
 }
 
 main {
-    padding: 0 3.6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height:100vh;
+    padding: 4rem 3.6rem;
 }
 
 article {
     display: grid;
     grid-template-columns: 1fr;
+}
+
+header {
+    margin-bottom: 7rem;
 }
 
 header img {
@@ -125,21 +133,21 @@ button {
     main {
         max-width: 143.5rem;
         margin: 0 auto;
-        padding: 0 8rem;
+        padding: 6.4rem 8rem 4rem 8rem;
     }
 
     article {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: minmax(auto, 696px) minmax(auto, 520px);
         gap: 5.9rem;
+    }
+
+    header {
+        margin-bottom: 10.4rem;
     }
 
     header img {
         max-width: 20rem;
-    }
-
-    div {
-        max-width: 52rem;
     }
 
     button {
